(Year/Month/Day)

(2021/7/25)
BodyDef

(2021/7/27)
DamageDef
HediffDef
ThingDef
RecipeDef

(2021/8/4)
HediffDef
RecipeDef

(2021/8/5)
ThingDef

(2021/8/14)
ThingDef

(2021/9/3)
AlienRace.BackstoryDef

(2021/9/6)
HediffDef

(2021/9/8)
StyleItemCategoryDef

(2021/10/5)
AlienRace.BackstoryDef
AlienRace.ThingDef_AlienRace
HediffDef
PawnKindDef
RoyalTitlePermitDef

(2021/10/16)
ThingDef : <EggProtyUn.description>

(2021/10/20)
ThingDef : <AT_AP_CO_A.description> , <AT_AP_CO_B.description>

(2021/11/1)
AlienRace.BackstoryDef
  Anty_Amigo_B_Rangedinfantry_Drop .title .titleShort .baseDescription

(2021/11/12)
String/Name/Anty/First
 After Weed

(2022/01/11)
ThingDef
  AT_Proty_spawner .label .description
  AT_Proty_spaBulletProtyspawnerwner .label
  AT_Proty_spawner_Tunnel .label .description
  AT_Proty_spawner_Tunnel_Open .label .description

(2022/01/18)
ThingDef
  AntyTransitionRefleum_Thing .label .description

HediffDef
  AT_Dreadnought_Reborn .label .description
  AT_Dreadnought_Reborn_High .label .description
  AntyDreadnoughtbirth .comps.0.discoverLetterLabel .comps.0.discoverLetterText
  Antypheromone_ShootingReady .label

RecipeDef
  AT_Dreadnought_metamorphosis .label .description .jobString

ResearchProjectDef
  AT_Dreadnought_metamorphosisSurgery .label .description .discoveredLetterTitle .discoveredLetterText